:bug:Correção de algumas funcionalidades

--- a/Web.config
+++ b/Web.config
@@ -11,7 +11,7 @@
   <system.web>
 	<authentication mode="Forms">
 		<forms loginUrl="~/Login.aspx" defaultUrl="~/Default.apsx" timeout="2880"
-			   protection="All" path="/" name="WebApplicationFprms" ></forms>
+			   protection="All" path="/" name="WebApplicationForms" ></forms>
 	</authentication>
 	<authorization>
 		
